fixed scrollbars

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,10 @@
   text-decoration: none;
 }
 
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
 .main {
   z-index: 0;
   display: flex;
