--- a/src/components/Transactions/TransactionHistory/TransactionHistory.scss
+++ b/src/components/Transactions/TransactionHistory/TransactionHistory.scss
@@ -5,6 +5,7 @@
 .transaction-container {
   height: 100%;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .transaction-history {
